--- a/_mixins.scss
+++ b/_mixins.scss
@@ -3,11 +3,11 @@
     //styles go here
 }
 
-//640px, 1024px, 1400px
+//640px, 1024px, 1400px, target certain viewports and up, usually do this
 $breakpoints-up: ("medium": "40em", "large": "64em", "xlarge": "87.5em");
 
-//639px, 1023px, 1399px
-$breakpoints-down: ("small": "39.9375em", "large": "63.9375em", "xlarge": "87.4375em");
+//639px, 1023px, 1399px, sometimes do this
+$breakpoints-down: ("small": "39.9375em", "medium": "63.9375em", "large": "87.4375em");
 
 @mixin breakpoint-up($size){
     @media (min-width: map-get($breakpoints-up, $size)){
