--- a/style.css
+++ b/style.css
@@ -1,3 +1,103 @@
+.header {
+  background-color: #fafafa;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+.header.active {
+  /*make it only show when scroll*/
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+}
+
+.header nav {
+  height: 5rem;
+  padding: 0.1rem 0.1rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.header__toggle > span {
+  display: block;
+  width: 26px;
+  height: 2px;
+  background-color: black;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  -webkit-transform-origin: 3px 1px;
+          transform-origin: 3px 1px;
+}
+
+.header__toggle > span:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.header__toggle.open > span:first-child {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.header__toggle.open > span:nth-child(2) {
+  opacity: 0;
+}
+
+.header__toggle.open > span:last-child {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.header__menu {
+  background: #fafafa;
+  border: 3px dashed black;
+  padding: 1.625rem;
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
+}
+
+.header__menu a {
+  color: black;
+  padding: 0.625rem;
+  display: block;
+  text-align: center;
+}
+
+.header__links a {
+  position: relative;
+  font-size: 1.125rem;
+  color: #696868;
+  -webkit-transition: color 300ms ease-in-out;
+  transition: color 300ms ease-in-out;
+}
+
+.header__links a:not(:last-child) {
+  margin-right: 32px;
+}
+
+.header__links a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 5px;
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  background: -webkit-gradient(linear, left top, right top, from(black), to(black));
+  background: linear-gradient(to right, black, black);
+  opacity: 0;
+  -webkit-transition: opacity 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
+}
+
+.header__links a:hover {
+  color: #2d314d;
+}
+
+.header__links a:hover::before {
+  opacity: 1;
+}
+
 html {
   font-size: 100%;
   -webkit-box-sizing: border-box;
@@ -227,102 +327,5 @@ button, .button {
 h2 {
   color: white;
   text-align: center;
-}
-
-.header {
-  background-color: #fafafa;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-}
-
-.header.active {
-  /*make it only show when scroll*/
-  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-}
-
-.header nav {
-  height: 5rem;
-  padding: 0.1rem 0.1rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
-.header__menu > span {
-  display: block;
-  width: 26px;
-  height: 2px;
-  background-color: black;
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-  -webkit-transform-origin: 3px 1px;
-          transform-origin: 3px 1px;
-}
-
-.header__menu > span:not(:last-child) {
-  margin-bottom: 5px;
-}
-
-.header__menu.open > span:first-child {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-.header__menu.open > span:nth-child(2) {
-  opacity: 0;
-}
-
-.header__menu.open > span:last-child {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-
-.header__links a {
-  position: relative;
-  font-size: 1.125rem;
-  color: #696868;
-  -webkit-transition: color 300ms ease-in-out;
-  transition: color 300ms ease-in-out;
-}
-
-.header__links a:not(:last-child) {
-  margin-right: 32px;
-}
-
-.header__links a::before {
-  content: "";
-  display: block;
-  position: absolute;
-  height: 5px;
-  left: 0;
-  right: 0;
-  bottom: -30px;
-  background: -webkit-gradient(linear, left top, right top, from(black), to(black));
-  background: linear-gradient(to right, black, black);
-  opacity: 0;
-  -webkit-transition: opacity 300ms ease-in-out;
-  transition: opacity 300ms ease-in-out;
-}
-
-.header__links a:hover {
-  color: #2d314d;
-}
-
-.header__links a:hover::before {
-  opacity: 1;
-}
-
-.header__cta {
-  font-size: 0.875rem;
-  color: white;
-  -webkit-transition: opacity 300ms ease-in-out;
-  transition: opacity 300ms ease-in-out;
-}
-
-.footer {
-  height: 5rem;
-  margin-bottom: 0rem;
 }
 /*# sourceMappingURL=style.css.map */
